	  - Added parametric equalizer (Hendrik Iben)
	  - Fixed many bugs which produced distorted sound
	* General configuration file changes:
	  - Reconciled and regularised example config and keymap files
	  - Introduced lists and function-like syntax
	  - Introduced variable substitution
	  - Introduced symbol and boolean option types
	  - Improved security of the configuration file
	* Changed configuration file options:
	  - Layout# options moved to a list and function-like syntax
	  - SoundDriver option moved to a list syntax
	  - Renamed OSSMixerChannel to OSSMixerChannel1
	  - Renamed ALSAMixer to ALSAMixer1
	  - QueueNextSongReturn moved to yes/no values
	  - TagsCacheSize set to zero now disables tag caching
	* New configuration file options:
	  - OnSongChange: run an external command (Jack Miller)
	  - RepeatSongChange: govern the running of the OnSongChange command
	  - OnStop: run an external command on stopping
	  - EnforceTagsEncoding: substitutes ID3v1TagsEncoding for ISO-8859-1
	    encoding in id3v2 tags (Aleks Sherikov)
	  - FileNamesIconv: converts from local to UTF8 encoding for file names
	    (Aleks Sherikov)
	  - NonUTFXterm: converts UTF8 to local encoding for X-Term titles
		(Aleks Sherikov)
	  - AutoLoadLyrics: says whether MOC should look for lyrics files
	  - PreferredDecoders: allow finer control over decoder selection
	  - XTerms: externalises terminals regarded as X-Terms
	  - UseMIMEMagic: says whether to identify audio files by using MIME
	  - JackStartServer: autostart JACK the server (Max Klinger)
	  - ShowTimePercent: set the percent played state (Daniel T. Borelli)
	  - Various options for SidPlay2, Modplug and TiMidity support
	* New command line options:
	  - '-O' to override configuration file settings
	  - '-q' to queue files from command line (Martin Milata)
	  - '-j' to jump to some position in the current track (Nuno Cardoso)
	  - '-Q' to display user formatted information (Juho Hämäläinen)